Fixed cards overflowing or showing too few. New playing animation for tracks, misc scrollbar view changes.

--- a/src/assets/scss/Global/app-grid.scss
+++ b/src/assets/scss/Global/app-grid.scss
@@ -14,6 +14,11 @@ $g-border: solid 1px $gray5;
   border-top: none;
   border-bottom: none;
   margin: 0 auto;
+  position: relative;
+
+  #contentresizer {
+    margin: 0 $padright 0 $padleft;
+  }
 
   @include allPhones {
     grid-template-columns: 1fr;
@@ -22,17 +27,6 @@ $g-border: solid 1px $gray5;
       "content"
       "bottombar";
     grid-template-rows: auto 1fr auto;
-  }
-}
-
-@include allPhones {
-  #app-grid.is_alt_layout {
-    grid-template-columns: 1fr !important;
-    grid-template-rows: max-content 1fr 9.5rem !important;
-    grid-template-areas:
-      "nav"
-      "content"
-      "bottombar" !important;
   }
 }
 
@@ -106,6 +100,15 @@ $g-border: solid 1px $gray5;
     "content"
     "bottombar";
 
+  @include allPhones {
+    grid-template-columns: 1fr !important;
+    grid-template-rows: max-content 1fr 9.5rem !important;
+    grid-template-areas:
+      "nav"
+      "content"
+      "bottombar" !important;
+  }
+
   .vue-recycle-scroller,
   .content-page,
   .topnav,
@@ -117,6 +120,10 @@ $g-border: solid 1px $gray5;
   .b-bar,
   .search-page-top-results {
     padding: 0 $alt_layout_pad;
+  }
+
+  #contentresizer {
+    margin: 0 $alt_layout_pad;
   }
 
   .topnav {
@@ -156,6 +163,10 @@ $g-border: solid 1px $gray5;
     #songlist-scroller {
       padding-left: $alt_layout_pad;
       padding-right: $alt_layout_pad;
+    }
+
+    #contentresizer {
+      margin: 0 $alt_layout_pad;
     }
 
     .search-view .buttons-area {
